Make sure colors meet minimum contrast ratio (#5)

--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -7,7 +7,7 @@ $darkShade03 = #1E2126
 
 $accentColor = $mainTeal
 $badgeWarningColor = #FFC43D
-$badgeErrorColor = #D3454F
+$badgeErrorColor = #FF5352
 
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
@@ -247,7 +247,7 @@ pre[class*="language-"]
 
 .token
     &.punctuation
-        color #4a5f78
+        color #fff
     &.namespace
         opacity .7
     &.deleted
@@ -258,7 +258,7 @@ pre[class*="language-"]
     &.italic
         font-style italic
     &.important
-        color #4297BC
+        color #48a6ce
     &.entity
         cursor help
 
